--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" style="overflow: auto;">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -12,11 +13,11 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/sticky-footer-navbar/" />
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
 
     <!-- Custom styles for this template -->
-    <link href="sticky-footer-navbar.css" rel="stylesheet" />
+    <!-- Custom styles for this template -->
+    <link href="Assets/css/sticky-footer-navbar.css" rel="stylesheet" />
 
 
     <!-- Google Font Catamaran -->
@@ -26,11 +27,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Customized CSS -->
-    <link rel="stylesheet" href="jdh_style.css">
-
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="Assets/css/jdh_style.css">
 
     <script src="https://kit.fontawesome.com/447e525a7d.js" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 
 
 </head>
@@ -38,14 +38,11 @@
 <body cz-shortcut-listen="true">
 
     <header>
-        <div class="m-auto text-center" style=" height: 150px;"><img src="Assets/Images/jdh-01.png" class="img-fluid"
-            style="height: 150px;" alt="JDHarris Signature"></div>
-    <!-- Fixed navbar -->
-        <nav role="navigation" class="navbar-top navbar-expand-md navbar-dark bg-dark pl-3 pr-3 py-2"
-            style="font-family: 'Catamaran', sans-serif; position: absolute; top: 150; left: 0; right: 0; margin: auto; z-index: 1;">
+        <div class="m-auto text-center" style=" height: 150px;"><img src="Assets/Images/jdh-01.png" class="img-fluid" style="height: 150px;" alt="JDHarris Signature"></div>
+        <!-- Fixed navbar -->
+        <nav role="navigation" class="navbar-top navbar-expand-md navbar-dark bg-dark pl-3 pr-3 py-2" style="font-family: 'Catamaran', sans-serif; position: absolute; top: 150; left: 0; right: 0; margin: auto; z-index: 1;">
             <!-- <a class="navbar-brand" style="font-size: 24px;" href="#">David Harris</a> -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -74,12 +71,11 @@
         <section class="mb-5 pb-5">
 
             <!--Section heading-->
-            <h2 class="h1-responsive font-weight-bold text-center my-4">Contact Me</h2>
-            <!--Section description-->
-            <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to
-                contact me directly. I will get back to you within
-                a matter of hours to help you.</p>
+            <h2 class="h1-responsive font-weight-bold text-center my-2">Contact Me</h2>
 
+            <!--Section description-->
+            <p class="text-center w-responsive mx-auto ">Do you have any questions? Please do not hesitate to contact me directly.</p>
+            <h4 class="h3-responsive font-weight-bold text-center mt-4 mb-4"> James DAVID Harris</h4>
             <div class="row">
 
                 <!--Grid column-->
@@ -129,8 +125,7 @@
                             <div class="col-md-12">
 
                                 <div class="md-form">
-                                   <textarea type="text" id="message" name="message" rows="2"
-                                        class="form-control md-textarea"></textarea>
+                                    <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
                                     <label for="message">Your message</label>
                                 </div>
 
@@ -139,7 +134,7 @@
                         <!--Grid row-->
 
                     </form>
-                    
+
                     <div class="text-center text-md-left">
                         <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">
                             Send
@@ -182,8 +177,12 @@
                 <i class="fab fa-linkedin linkedin fa-2x p-3"></i>
             </a>
 
-            <a href="#" target="_blank" class="icon-block">
-                <i class="fab fa-facebook facebook fa-2x p-3"></i>
+            <a href="Assets/Profesional_Docs/JDH_FullStackDeveloper_Resume_2020.pdf" target="_blank" class="icon-block">
+                <i class="far facebook  fa-file-alt fa-2x p-3"></i></i>
+            </a>
+
+            <a href="https://github.com/jdhprogrammer" target="_blank" class="icon-block">
+                <i class="fab fa-github-square github fa-2x p-3"></i>
             </a>
 
             <a href="https://www.instagram.com/jdh_programmer/" target="_blank" class="icon-block">
@@ -194,9 +193,6 @@
                 <i class="fab fa-twitter-square twitter fa-2x p-3"></i>
             </a>
 
-            <a href="https://github.com/jdhprogrammer" target="_blank" class="icon-block">
-                <i class="fab fa-github-square github fa-2x p-3"></i>
-            </a>
 
         </div>
     </footer>
@@ -211,12 +207,11 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
     </script>
 
 </body>
+
 </html>
