--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" style="overflow: auto;">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -12,11 +13,10 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/sticky-footer-navbar/" />
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
-        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
 
     <!-- Custom styles for this template -->
-    <link href="sticky-footer-navbar.css" rel="stylesheet" />
+    <link href="Assets/css/sticky-footer-navbar.css" rel="stylesheet" />
 
 
     <!-- Google Font Catamaran -->
@@ -26,7 +26,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Customized CSS -->
-    <link rel="stylesheet" href="jdh_style.css">
+    <link rel="stylesheet" href="Assets/css/jdh_style.css">
 
     <script src="https://kit.fontawesome.com/447e525a7d.js" crossorigin="anonymous"></script>
     <script src="script.js"></script>
@@ -35,14 +35,11 @@
 <body cz-shortcut-listen="true">
 
     <header>
-        <div class="m-auto text-center" style=" height: 150px;"><img src="Assets/Images/jdh-01.png" class="img-fluid"
-                style="height: 150px;" alt="JDHarris Signature"></div>
+        <div class="m-auto text-center" style=" height: 150px;"><img src="Assets/Images/jdh-01.png" class="img-fluid" style="height: 150px;" alt="JDHarris Signature"></div>
         <!-- Fixed navbar -->
-        <nav role="navigation" class="navbar-top navbar-expand-md navbar-dark bg-dark pl-3 pr-3 py-2"
-            style="font-family: 'Catamaran', sans-serif; position: absolute; top: 150; left: 0; right: 0; margin: auto; z-index: 1;">
+        <nav role="navigation" class="navbar-top navbar-expand-md navbar-dark bg-dark pl-3 pr-3 py-2" style="font-family: 'Catamaran', sans-serif; position: absolute; top: 150; left: 0; right: 0; margin: auto; z-index: 1;">
             <!-- <a class="navbar-brand" style="font-size: 24px;" href="#">David Harris</a> -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -77,11 +74,8 @@
     <main role="main" class="container">
 
         <div class="row text-center pb-4 py-5" style="font-size: 28px; font-style: italic;">
-            <div class="col-12">"Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quis, neque repudiandae
-                rem dignissimos velit tenetur nemo doloremque rerum veritatis in culpa, dolor eaque alias vero eius
-                perferendis porro odio. Illo ullam odio omnis. Quas, dolores! Aspernatur exercitationem mollitia ullam
-                labore rem dolorum ducimus voluptatum libero neque doloremque. Quis aliquam voluptas id voluptatum ad
-                officia nulla voluptatem debitis dolores doloremque similique voluptatibus asperiores quasi repellendus
+            <div class="col-12">"Andy ipsum dolor sit amet consectetur adipisicing elit. Quas quis, neque repudiandae rem dignissimos velit tenetur nemo doAndyque rerum veritatis in culpa, dolor eaque alias vero eius perferendis porro odio. Illo ullam odio omnis. Quas, dolores!
+                Aspernatur exercitationem mollitia ullam labore rem dolorum ducimus voluptatum libero neque doAndyque. Quis aliquam voluptas id voluptatum ad officia nulla voluptatem debitis dolores doAndyque similique voluptatibus asperiores quasi repellendus
                 architecto explicabo officiis, doloribus quos delectus harum magnam possimus alias!"</div>
         </div>
         <div class="row justify-content-around text-center py-2">
@@ -94,10 +88,8 @@
                         <img class="img-fluid rounded mx-auto d-block" src="Assets/Images/callout-creative.jpg" alt="">
                     </div>
                 </div>
-                <div class="row py-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium inventore
-                    deserunt ipsum qui deleniti quas sit porro commodi suscipit, magnam, nulla quis, nam vero. Saepe
-                    debitis, aliquid quod dolores assumenda, excepturi mollitia sunt enim neque, eius accusamus ea
-                    molestias libero porro dolorem totam magni aut eos molestiae! Consequatur, ratione eum?</div>
+                <div class="row py-3">Andy ipsum dolor sit amet consectetur, adipisicing elit. Laudantium inventore deserunt ipsum qui deleniti quas sit porro commodi suscipit, magnam, nulla quis, nam vero. Saepe debitis, aliquid quod dolores assumenda, excepturi mollitia
+                    sunt enim neque, eius accusamus ea molestias libero porro doAndy totam magni aut eos molestiae! Consequatur, ratione eum?</div>
             </div>
             <div class="col-12 col-md-12 col-lg-3">
                 <div class="row">
@@ -108,10 +100,8 @@
                         <img class="img-fluid rounded mx-auto d-block" src="Assets/Images/callout-driven.jpg" alt="">
                     </div>
                 </div>
-                <div class="row py-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium inventore
-                    deserunt ipsum qui deleniti quas sit porro commodi suscipit, magnam, nulla quis, nam vero. Saepe
-                    debitis, aliquid quod dolores assumenda, excepturi mollitia sunt enim neque, eius accusamus ea
-                    molestias libero porro dolorem totam magni aut eos molestiae! Consequatur, ratione eum?</div>
+                <div class="row py-3">Andy ipsum dolor sit amet consectetur, adipisicing elit. Laudantium inventore deserunt ipsum qui deleniti quas sit porro commodi suscipit, magnam, nulla quis, nam vero. Saepe debitis, aliquid quod dolores assumenda, excepturi mollitia
+                    sunt enim neque, eius accusamus ea molestias libero porro doAndy totam magni aut eos molestiae! Consequatur, ratione eum?</div>
             </div>
             <div class="col-12 col-md-12 col-lg-3">
                 <div class="row">
@@ -122,14 +112,13 @@
                         <img class="img-fluid rounded mx-auto d-block" src="Assets/Images/callout-professional.jpg" alt="">
                     </div>
                 </div>
-                <div class="row py-3">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laudantium inventore
-                    deserunt ipsum qui deleniti quas sit porro commodi suscipit, magnam, nulla quis, nam vero. Saepe
-                    debitis, aliquid quod dolores assumenda, excepturi mollitia sunt enim neque, eius accusamus ea
-                    molestias libero porro dolorem totam magni aut eos molestiae! Consequatur, ratione eum?</div>
+                <div class="row py-3">Andy ipsum dolor sit amet consectetur, adipisicing elit. Laudantium inventore deserunt ipsum qui deleniti quas sit porro commodi suscipit, magnam, nulla quis, nam vero. Saepe debitis, aliquid quod dolores assumenda, excepturi mollitia
+                    sunt enim neque, eius accusamus ea molestias libero porro doAndy totam magni aut eos molestiae! Consequatur, ratione eum?</div>
             </div>
 
 
         </div>
+
 
 
     </main>
@@ -141,8 +130,12 @@
                 <i class="fab fa-linkedin linkedin fa-2x p-3"></i>
             </a>
 
-            <a href="#" target="_blank" class="icon-block">
-                <i class="fab fa-facebook facebook fa-2x p-3"></i>
+            <a href="Assets/Profesional_Docs/JDH_FullStackDeveloper_Resume_2020.pdf" target="_blank" class="icon-block">
+                <i class="far facebook  fa-file-alt fa-2x p-3"></i></i>
+            </a>
+
+            <a href="https://github.com/jdhprogrammer" target="_blank" class="icon-block">
+                <i class="fab fa-github-square github fa-2x p-3"></i>
             </a>
 
             <a href="https://www.instagram.com/jdh_programmer/" target="_blank" class="icon-block">
@@ -153,9 +146,6 @@
                 <i class="fab fa-twitter-square twitter fa-2x p-3"></i>
             </a>
 
-            <a href="https://github.com/jdhprogrammer" target="_blank" class="icon-block">
-                <i class="fab fa-github-square github fa-2x p-3"></i>
-            </a>
 
         </div>
     </footer>
@@ -170,14 +160,13 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
     </script>
 
 </body>
+
 </html>
