updated portfolio page. added images of projects, links, buttons, resume, added name to contact page, and more

--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
     <main role="main" class="container">
 
         <div class="row text-center pb-4 py-5" style="font-size: 28px; font-style: italic;">
-            <div class="col-12">"Andy ipsum dolor sit amet consectetur adipisicing elit. Quas quis, neque repudiandae rem dignissimos velit tenetur nemo doAndyque rerum veritatis in culpa, dolor eaque alias vero eius perferendis porro odio. Illo ullam odio omnis. Quas, dolores!
-                Aspernatur exercitationem mollitia ullam labore rem dolorum ducimus voluptatum libero neque doAndyque. Quis aliquam voluptas id voluptatum ad officia nulla voluptatem debitis dolores doAndyque similique voluptatibus asperiores quasi repellendus
-                architecto explicabo officiis, doloribus quos delectus harum magnam possimus alias!"</div>
+            <div class="col-12 text-left text-sm-center px-2">Full stack web developer with front-end and back-end programming experience educated at SMU Coding Boot camp. Skills in HTML, CSS, JavaScript, and Python and strengths in problem solving, balancing aesthetics with performance, and working
+                with a team. Bringing to the table an extensive background in photography and audio visual technology. Re-designed and programmed Web and Mobile applications for multiple local businesses, with a focus on UX & UI quality to the customer.
+                Interested in creating websites and applications that people are excited about and happy to use, and that make their lives easier. Never stop learning… Always be coding. Prepared to contribute unique ideas and understanding on visual and
+                operational aspects of software. Excited to work with a team of developers eager to learn new things daily, always ready to listen or to lead.</div>
         </div>
         <div class="row justify-content-around text-center py-2">
             <div class="col-12 col-md-12 col-lg-3">
@@ -113,7 +114,8 @@
                     </div>
                 </div>
                 <div class="row py-3">Andy ipsum dolor sit amet consectetur, adipisicing elit. Laudantium inventore deserunt ipsum qui deleniti quas sit porro commodi suscipit, magnam, nulla quis, nam vero. Saepe debitis, aliquid quod dolores assumenda, excepturi mollitia
-                    sunt enim neque, eius accusamus ea molestias libero porro doAndy totam magni aut eos molestiae! Consequatur, ratione eum?</div>
+                    sunt enim neque, eius accusamus ea molestias libero porro doAndy totam magni aut eos molestiae! Consequatur, ratione eum?
+                </div>
             </div>
 
 
