--- a/portfolio.html
+++ b/portfolio.html
@@ -69,111 +69,163 @@
 
         <div class="row justify-content-around py-lg-4 pb-lg-4">
 
-            <div class="col-12 col-md-6 col-lg-4 text-center">
+            <div class="col-12 col-md-6 col-lg-4 mb-4 text-center">
                 <div class="row">
-                    <div class="col p-3" style="font-size: 30px;">HTML & CSS</div>
+                    <div class="col p-3">
+                        <p class="mb-0" style="font-size: 25px;">JS Password Generator</p>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <img src="http://placehold.it/350x350" class="img-fluid rounded mx-auto d-block" alt="">
+                        <a href="http://www.jdhprogrammer.com/JS_Password_Generator/" target="_blank">
+                            <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_003.jpg" class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
+                        </a>
+                        <a class="poFoLinks" target="_blank" href="http://jdhprogrammer.com/JS_Password_Generator/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/JS_Password_Generator">{visitGitHubProject}</a>
                     </div>
                 </div>
             </div>
 
-            <div class="col-12 col-md-6 col-lg-4 text-center">
+            <div class="col-12 col-md-6 col-lg-4 mb-4 text-center">
                 <div class="row">
-                    <div class="col p-3" style="font-size: 30px;">Bootstrap</div>
+                    <div class="col p-3">
+                        <p class="mb-0" style="font-size: 25px;">Responsive Bootstrap</p>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <img src="http://placehold.it/350x350" class="img-fluid rounded mx-auto d-block" alt="">
+                        <a href="http://www.jdhprogrammer.com/Responsive_Bootstrap_Site/" target="_blank">
+                            <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_001.jpg" class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
+                        </a>
+                        <a class="poFoLinks" target="_blank" href="http://jdhprogrammer.com/Responsive_Bootstrap_Site/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/Responsive_Bootstrap_Site">{visitGitHubProject}</a>
                     </div>
                 </div>
             </div>
 
-            <div class="col-12 col-md-6 col-lg-4 text-center">
+            <div class="col-12 col-md-6 col-lg-4 mb-4 text-center">
                 <div class="row">
-                    <div class="col p-3" style="font-size: 30px;">JavaScript</div>
+                    <div class="col p-3">
+                        <p class="mb-0" style="font-size: 25px;">Javascript Quiz</p>
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <img src="http://placehold.it/350x350" class="img-fluid rounded mx-auto d-block" alt="">
+                        <a href="http://www.jdhprogrammer.com/Coding_Quiz" target="_blank">
+                            <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_002.jpg" class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
+                        </a>
+                        <a class="poFoLinks" target="_blank" href="http://jdhprogrammer.com/Coding_Quiz/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/Coding_Quiz">{visitGitHubProject}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-4 mb-4 text-center">
+                <div class="row">
+                    <div class="col p-3">
+                        <p class="mb-0" style="font-size: 25px;">Dynamic Day Planner</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <a href="http://www.jdhprogrammer.com/Dynamic_Day_Planner/" target="_blank">
+                            <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_004.jpg" class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of Dynamic Day Planner App">
+                        </a>
+                        <a class="poFoLinks" target="_blank" href="http://jdhprogrammer.com/Dynamic_Day_Planner/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/Dynamic_Day_Planner">{visitGitHubProject}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-4 mb-4 text-center">
+                <div class="row">
+                    <div class="col p-3">
+                        <p class="mb-0" style="font-size: 25px;">API Interaction</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <a href="http://www.jdhprogrammer.com/Weather-Dashboard/" target="_blank">
+                            <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_005.jpg" class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
+                        </a>
+                        <a class="poFoLinks" target="_blank" href="http://jdhprogrammer.com/Weather-Dashboard/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/Weather-Dashboard">{visitGitHubProject}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-4 mb-4 text-center">
+                <div class="row">
+                    <div class="col p-3">
+                        <p class="mb-0" style="font-size: 25px;">Optimization</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <a href="http://www.jdhprogrammer.com/Refactor_and_Optimization/" target="_blank">
+                            <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_006.jpg" class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
+                        </a>
+                        <a class="poFoLinks" target="_blank" href="http://jdhprogrammer.com/Refactor_and_Optimization/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/Refactor_and_Optimization">{visitGitHubProject}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-4 mb-4 text-center noShow">
+                <div class="row">
+                    <div class="col p-3">
+                        <p class="mb-0" style="font-size: 25px;">MERN Stack</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <a href="http://www.jdhprogrammer.com/JS_Password_Generator/" target="_blank">
+                            <img src="http://placehold.it/350x350" class="img-fluid rounded mx-auto d-block poFoImg" alt="">
+                        </a>
+                        <a class="poFoLinks" target="_blank" href="http://jdhprogrammer.com/JS_Password_Generator/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/JS_Password_Generator">{visitGitHubProject}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-4 mb-4 text-center noShow">
+                <div class="row">
+                    <div class="col p-3">
+                        <p class="mb-0" style="font-size: 25px;">Heroku</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <a href="http://www.jdhprogrammer.com/JS_Password_Generator/" target="_blank">
+                            <img src="http://placehold.it/350x350" class="img-fluid rounded mx-auto d-block poFoImg" alt="">
+                        </a>
+                        <a class="poFoLinks" target="_blank" href="http://jdhprogrammer.com/JS_Password_Generator/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/JS_Password_Generator">{visitGitHubProject}</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 col-md-6 col-lg-4 mb-4 text-center noShow">
+                <div class="row">
+                    <div class="col p-3">
+                        <p class="mb-0" style="font-size: 25px;">Python</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <a href="http://www.jdhprogrammer.com/JS_Password_Generator/" target="_blank">
+                            <img src="http://placehold.it/350x350" class="img-fluid rounded mx-auto d-block poFoImg" alt="">
+                        </a>
+                        <a class="poFoLinks" target="_blank" href="http://jdhprogrammer.com/JS_Password_Generator/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/JS_Password_Generator">{visitGitHubProject}</a>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="row justify-content-around py-lg-4 pb-lg-4">
 
-            <div class="col-12 col-md-6 col-lg-4 text-center">
-                <div class="row">
-                    <div class="col p-3" style="font-size: 30px;">MySQL</div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <img src="http://placehold.it/350x350" class="img-fluid rounded mx-auto d-block" alt="">
-                    </div>
-                </div>
-            </div>
 
-            <div class="col-12 col-md-6 col-lg-4 text-center">
-                <div class="row">
-                    <div class="col p-3" style="font-size: 30px;">API Interaction</div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <img src="http://placehold.it/350x350" class="img-fluid rounded mx-auto d-block" alt="">
-                    </div>
-                </div>
-            </div>
 
-            <div class="col-12 col-md-6 col-lg-4 text-center">
-                <div class="row">
-                    <div class="col p-3" style="font-size: 30px;">Optimization</div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <img src="http://placehold.it/350x350" class="img-fluid rounded mx-auto d-block" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row justify-content-around py-lg-4 pb-lg-4">
-
-            <div class="col-12 col-md-6 col-lg-4 text-center">
-                <div class="row">
-                    <div class="col p-3" style="font-size: 30px;">MERN Stack</div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <img src="http://placehold.it/350x350" class="img-fluid rounded mx-auto d-block" alt="">
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-md-6 col-lg-4 text-center">
-                <div class="row">
-                    <div class="col p-3" style="font-size: 30px;">Heroku</div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <img src="http://placehold.it/350x350" class="img-fluid rounded mx-auto d-block" alt="">
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-12 col-md-6 col-lg-4 text-center">
-                <div class="row">
-                    <div class="col p-3" style="font-size: 30px;">Python</div>
-                </div>
-                <div class="row">
-                    <div class="col">
-                        <img src="http://placehold.it/350x350" class="img-fluid rounded mx-auto d-block" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
 
     </main>
 
