changed weather dashboard to https

--- a/portfolio.html
+++ b/portfolio.html
@@ -148,7 +148,7 @@
                         <a href="http://www.jdhprogrammer.com/Weather-Dashboard/" target="_blank">
                             <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_005.jpg" class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
                         </a>
-                        <a class="poFoLinks" target="_blank" href="http://jdhprogrammer.com/Weather-Dashboard/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank" href="https://jdhprogrammer.com/Weather-Dashboard/">[visitDeployedApplication]</a>
                         <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/Weather-Dashboard">{visitGitHubProject}</a>
                     </div>
                 </div>
