http S for secure sites

--- a/portfolio.html
+++ b/portfolio.html
@@ -77,10 +77,10 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <a href="http://www.jdhprogrammer.com/JS_Password_Generator/" target="_blank">
+                        <a href="https://www.jdhprogrammer.com/JS_Password_Generator/" target="_blank">
                             <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_003.jpg" class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
                         </a>
-                        <a class="poFoLinks" target="_blank" href="http://jdhprogrammer.com/JS_Password_Generator/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank" href="https://jdhprogrammer.com/JS_Password_Generator/">[visitDeployedApplication]</a>
                         <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/JS_Password_Generator">{visitGitHubProject}</a>
                     </div>
                 </div>
@@ -94,10 +94,10 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <a href="http://www.jdhprogrammer.com/Responsive_Bootstrap_Site/" target="_blank">
+                        <a href="https://www.jdhprogrammer.com/Responsive_Bootstrap_Site/" target="_blank">
                             <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_001.jpg" class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
                         </a>
-                        <a class="poFoLinks" target="_blank" href="http://jdhprogrammer.com/Responsive_Bootstrap_Site/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank" href="https://jdhprogrammer.com/Responsive_Bootstrap_Site/">[visitDeployedApplication]</a>
                         <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/Responsive_Bootstrap_Site">{visitGitHubProject}</a>
                     </div>
                 </div>
@@ -111,10 +111,10 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <a href="http://www.jdhprogrammer.com/Coding_Quiz" target="_blank">
+                        <a href="https://www.jdhprogrammer.com/Coding_Quiz" target="_blank">
                             <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_002.jpg" class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
                         </a>
-                        <a class="poFoLinks" target="_blank" href="http://jdhprogrammer.com/Coding_Quiz/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank" href="https://jdhprogrammer.com/Coding_Quiz/">[visitDeployedApplication]</a>
                         <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/Coding_Quiz">{visitGitHubProject}</a>
                     </div>
                 </div>
@@ -128,10 +128,10 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <a href="http://www.jdhprogrammer.com/Dynamic_Day_Planner/" target="_blank">
+                        <a href="https://www.jdhprogrammer.com/Dynamic_Day_Planner/" target="_blank">
                             <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_004.jpg" class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of Dynamic Day Planner App">
                         </a>
-                        <a class="poFoLinks" target="_blank" href="http://jdhprogrammer.com/Dynamic_Day_Planner/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank" href="https://jdhprogrammer.com/Dynamic_Day_Planner/">[visitDeployedApplication]</a>
                         <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/Dynamic_Day_Planner">{visitGitHubProject}</a>
                     </div>
                 </div>
@@ -145,7 +145,7 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <a href="http://www.jdhprogrammer.com/Weather-Dashboard/" target="_blank">
+                        <a href="https://www.jdhprogrammer.com/Weather-Dashboard/" target="_blank">
                             <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_005.jpg" class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
                         </a>
                         <a class="poFoLinks" target="_blank" href="https://jdhprogrammer.com/Weather-Dashboard/">[visitDeployedApplication]</a>
@@ -162,10 +162,10 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <a href="http://www.jdhprogrammer.com/Refactor_and_Optimization/" target="_blank">
+                        <a href="https://www.jdhprogrammer.com/Refactor_and_Optimization/" target="_blank">
                             <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_006.jpg" class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
                         </a>
-                        <a class="poFoLinks" target="_blank" href="http://jdhprogrammer.com/Refactor_and_Optimization/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank" href="https://jdhprogrammer.com/Refactor_and_Optimization/">[visitDeployedApplication]</a>
                         <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/Refactor_and_Optimization">{visitGitHubProject}</a>
                     </div>
                 </div>
@@ -179,10 +179,10 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <a href="http://www.jdhprogrammer.com/JS_Password_Generator/" target="_blank">
-                            <img src="http://placehold.it/350x350" class="img-fluid rounded mx-auto d-block poFoImg" alt="">
+                        <a href="https://www.jdhprogrammer.com/JS_Password_Generator/" target="_blank">
+                            <img src="https://placehold.it/350x350" class="img-fluid rounded mx-auto d-block poFoImg" alt="">
                         </a>
-                        <a class="poFoLinks" target="_blank" href="http://jdhprogrammer.com/JS_Password_Generator/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank" href="https://jdhprogrammer.com/JS_Password_Generator/">[visitDeployedApplication]</a>
                         <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/JS_Password_Generator">{visitGitHubProject}</a>
                     </div>
                 </div>
@@ -196,10 +196,10 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <a href="http://www.jdhprogrammer.com/JS_Password_Generator/" target="_blank">
-                            <img src="http://placehold.it/350x350" class="img-fluid rounded mx-auto d-block poFoImg" alt="">
+                        <a href="https://www.jdhprogrammer.com/JS_Password_Generator/" target="_blank">
+                            <img src="https://placehold.it/350x350" class="img-fluid rounded mx-auto d-block poFoImg" alt="">
                         </a>
-                        <a class="poFoLinks" target="_blank" href="http://jdhprogrammer.com/JS_Password_Generator/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank" href="https://jdhprogrammer.com/JS_Password_Generator/">[visitDeployedApplication]</a>
                         <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/JS_Password_Generator">{visitGitHubProject}</a>
                     </div>
                 </div>
@@ -213,10 +213,10 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <a href="http://www.jdhprogrammer.com/JS_Password_Generator/" target="_blank">
-                            <img src="http://placehold.it/350x350" class="img-fluid rounded mx-auto d-block poFoImg" alt="">
+                        <a href="https://www.jdhprogrammer.com/JS_Password_Generator/" target="_blank">
+                            <img src="https://placehold.it/350x350" class="img-fluid rounded mx-auto d-block poFoImg" alt="">
                         </a>
-                        <a class="poFoLinks" target="_blank" href="http://jdhprogrammer.com/JS_Password_Generator/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank" href="https://jdhprogrammer.com/JS_Password_Generator/">[visitDeployedApplication]</a>
                         <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/JS_Password_Generator">{visitGitHubProject}</a>
                     </div>
                 </div>
