fixed portfolio page images. it was not easy. going to add more portfolio projects now. also figured out reversing the order of the projects so that most recent are at the top. also fixed the footer... which was partly hidden

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="stylesheet" href="../src/Assets/css/jdh_style.css">
+    <link href="../src/Assets/css/sticky-footer-navbar.css" rel="stylesheet" />
+     <!-- Google Font Catamaran -->
+     <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@400;700&display=swap" rel="stylesheet">
+
+     <!-- Google Font Roboto -->
+     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+    <script src="https://kit.fontawesome.com/447e525a7d.js" crossorigin="anonymous"></script>
+    <title>JDH Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
