--- a/portfolio_files/portfolio.html
+++ b/portfolio_files/portfolio.html
@@ -13,7 +13,8 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/sticky-footer-navbar/" />
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
 
     <!-- Custom styles for this template -->
     <link href="Assets/css/sticky-footer-navbar.css" rel="stylesheet" />
@@ -36,11 +37,14 @@
 <body cz-shortcut-listen="true">
 
     <header>
-        <div class="m-auto text-center" style=" height: 150px;"><img src="Assets/Images/jdh-01.png" class="img-fluid" style="height: 150px;" alt="JDHarris Signature"></div>
+        <div class="m-auto text-center" style=" height: 150px;"><img src="Assets/Images/jdh-01.png" class="img-fluid"
+                style="height: 150px;" alt="JDHarris Signature"></div>
         <!-- Fixed navbar -->
-        <nav role="navigation" class="navbar-top navbar-expand-md navbar-dark bg-dark pl-3 pr-3 py-2" style="font-family: 'Catamaran', sans-serif; position: absolute; top: 150; left: 0; right: 0; margin: auto; z-index: 1;">
+        <nav role="navigation" class="navbar-top navbar-expand-md navbar-dark bg-dark pl-3 pr-3 py-2"
+            style="font-family: 'Catamaran', sans-serif; position: absolute; top: 150; left: 0; right: 0; margin: auto; z-index: 1;">
             <!-- <a class="navbar-brand" style="font-size: 24px;" href="#">David Harris</a> -->
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -78,10 +82,13 @@
                 <div class="row">
                     <div class="col">
                         <a href="https://www.jdhprogrammer.com/JS_Password_Generator/" target="_blank">
-                            <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_003.jpg" class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
+                            <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_003.jpg"
+                                class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
                         </a>
-                        <a class="poFoLinks" target="_blank" href="https://jdhprogrammer.com/JS_Password_Generator/">[visitDeployedApplication]</a>
-                        <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/JS_Password_Generator">{visitGitHubProject}</a>
+                        <a class="poFoLinks" target="_blank"
+                            href="https://jdhprogrammer.com/JS_Password_Generator/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank"
+                            href="https://github.com/jdhprogrammer/JS_Password_Generator">{visitGitHubProject}</a>
                     </div>
                 </div>
             </div>
@@ -95,10 +102,13 @@
                 <div class="row">
                     <div class="col">
                         <a href="https://www.jdhprogrammer.com/Responsive_Bootstrap_Site/" target="_blank">
-                            <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_001.jpg" class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
+                            <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_001.jpg"
+                                class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
                         </a>
-                        <a class="poFoLinks" target="_blank" href="https://jdhprogrammer.com/Responsive_Bootstrap_Site/">[visitDeployedApplication]</a>
-                        <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/Responsive_Bootstrap_Site">{visitGitHubProject}</a>
+                        <a class="poFoLinks" target="_blank"
+                            href="https://jdhprogrammer.com/Responsive_Bootstrap_Site/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank"
+                            href="https://github.com/jdhprogrammer/Responsive_Bootstrap_Site">{visitGitHubProject}</a>
                     </div>
                 </div>
             </div>
@@ -112,10 +122,13 @@
                 <div class="row">
                     <div class="col">
                         <a href="https://www.jdhprogrammer.com/Coding_Quiz" target="_blank">
-                            <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_002.jpg" class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
+                            <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_002.jpg"
+                                class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
                         </a>
-                        <a class="poFoLinks" target="_blank" href="https://jdhprogrammer.com/Coding_Quiz/">[visitDeployedApplication]</a>
-                        <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/Coding_Quiz">{visitGitHubProject}</a>
+                        <a class="poFoLinks" target="_blank"
+                            href="https://jdhprogrammer.com/Coding_Quiz/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank"
+                            href="https://github.com/jdhprogrammer/Coding_Quiz">{visitGitHubProject}</a>
                     </div>
                 </div>
             </div>
@@ -129,10 +142,14 @@
                 <div class="row">
                     <div class="col">
                         <a href="https://www.jdhprogrammer.com/Dynamic_Day_Planner/" target="_blank">
-                            <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_004.jpg" class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of Dynamic Day Planner App">
+                            <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_004.jpg"
+                                class="img-fluid rounded mx-auto d-block poFoImg"
+                                alt="Screenshot of Dynamic Day Planner App">
                         </a>
-                        <a class="poFoLinks" target="_blank" href="https://jdhprogrammer.com/Dynamic_Day_Planner/">[visitDeployedApplication]</a>
-                        <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/Dynamic_Day_Planner">{visitGitHubProject}</a>
+                        <a class="poFoLinks" target="_blank"
+                            href="https://jdhprogrammer.com/Dynamic_Day_Planner/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank"
+                            href="https://github.com/jdhprogrammer/Dynamic_Day_Planner">{visitGitHubProject}</a>
                     </div>
                 </div>
             </div>
@@ -146,10 +163,13 @@
                 <div class="row">
                     <div class="col">
                         <a href="https://www.jdhprogrammer.com/Weather-Dashboard/" target="_blank">
-                            <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_005.jpg" class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
+                            <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_005.jpg"
+                                class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
                         </a>
-                        <a class="poFoLinks" target="_blank" href="https://jdhprogrammer.com/Weather-Dashboard/">[visitDeployedApplication]</a>
-                        <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/Weather-Dashboard">{visitGitHubProject}</a>
+                        <a class="poFoLinks" target="_blank"
+                            href="https://jdhprogrammer.com/Weather-Dashboard/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank"
+                            href="https://github.com/jdhprogrammer/Weather-Dashboard">{visitGitHubProject}</a>
                     </div>
                 </div>
             </div>
@@ -163,10 +183,13 @@
                 <div class="row">
                     <div class="col">
                         <a href="https://www.jdhprogrammer.com/Refactor_and_Optimization/" target="_blank">
-                            <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_006.jpg" class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
+                            <img src="Assets/Images/Porfolio_Page_images/jdh_portfolio_thumb_006.jpg"
+                                class="img-fluid rounded mx-auto d-block poFoImg" alt="Screenshot of ">
                         </a>
-                        <a class="poFoLinks" target="_blank" href="https://jdhprogrammer.com/Refactor_and_Optimization/">[visitDeployedApplication]</a>
-                        <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/Refactor_and_Optimization">{visitGitHubProject}</a>
+                        <a class="poFoLinks" target="_blank"
+                            href="https://jdhprogrammer.com/Refactor_and_Optimization/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank"
+                            href="https://github.com/jdhprogrammer/Refactor_and_Optimization">{visitGitHubProject}</a>
                     </div>
                 </div>
             </div>
@@ -180,10 +203,13 @@
                 <div class="row">
                     <div class="col">
                         <a href="https://www.jdhprogrammer.com/JS_Password_Generator/" target="_blank">
-                            <img src="https://placehold.it/350x350" class="img-fluid rounded mx-auto d-block poFoImg" alt="">
+                            <img src="https://placehold.it/350x350" class="img-fluid rounded mx-auto d-block poFoImg"
+                                alt="">
                         </a>
-                        <a class="poFoLinks" target="_blank" href="https://jdhprogrammer.com/JS_Password_Generator/">[visitDeployedApplication]</a>
-                        <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/JS_Password_Generator">{visitGitHubProject}</a>
+                        <a class="poFoLinks" target="_blank"
+                            href="https://jdhprogrammer.com/JS_Password_Generator/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank"
+                            href="https://github.com/jdhprogrammer/JS_Password_Generator">{visitGitHubProject}</a>
                     </div>
                 </div>
             </div>
@@ -197,10 +223,13 @@
                 <div class="row">
                     <div class="col">
                         <a href="https://www.jdhprogrammer.com/JS_Password_Generator/" target="_blank">
-                            <img src="https://placehold.it/350x350" class="img-fluid rounded mx-auto d-block poFoImg" alt="">
+                            <img src="https://placehold.it/350x350" class="img-fluid rounded mx-auto d-block poFoImg"
+                                alt="">
                         </a>
-                        <a class="poFoLinks" target="_blank" href="https://jdhprogrammer.com/JS_Password_Generator/">[visitDeployedApplication]</a>
-                        <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/JS_Password_Generator">{visitGitHubProject}</a>
+                        <a class="poFoLinks" target="_blank"
+                            href="https://jdhprogrammer.com/JS_Password_Generator/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank"
+                            href="https://github.com/jdhprogrammer/JS_Password_Generator">{visitGitHubProject}</a>
                     </div>
                 </div>
             </div>
@@ -214,10 +243,13 @@
                 <div class="row">
                     <div class="col">
                         <a href="https://www.jdhprogrammer.com/JS_Password_Generator/" target="_blank">
-                            <img src="https://placehold.it/350x350" class="img-fluid rounded mx-auto d-block poFoImg" alt="">
+                            <img src="https://placehold.it/350x350" class="img-fluid rounded mx-auto d-block poFoImg"
+                                alt="">
                         </a>
-                        <a class="poFoLinks" target="_blank" href="https://jdhprogrammer.com/JS_Password_Generator/">[visitDeployedApplication]</a>
-                        <a class="poFoLinks" target="_blank" href="https://github.com/jdhprogrammer/JS_Password_Generator">{visitGitHubProject}</a>
+                        <a class="poFoLinks" target="_blank"
+                            href="https://jdhprogrammer.com/JS_Password_Generator/">[visitDeployedApplication]</a>
+                        <a class="poFoLinks" target="_blank"
+                            href="https://github.com/jdhprogrammer/JS_Password_Generator">{visitGitHubProject}</a>
                     </div>
                 </div>
             </div>
@@ -267,10 +299,12 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+        </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
+        </script>
 
 </body>
 
